--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,6 @@ jobs:
         run: npm run test       
 
       - name: Test Command to Create Log
-        if: failure()
         run: |
           echo "Test failed at $(date)" > cypress-test-log.txt
           echo "Error details:" >> cypress-test-log.txt
@@ -65,6 +64,56 @@ jobs:
           path: cypress/videos
           if-no-files-found: ignore
       
+      - name: Manage Cypress Logs (limit to 100)
+        if: failure()
+        run: |
+          LOG_DIR="cypress/reports"
+          LOG_LIMIT=100
+          
+          if [ -d "$LOG_DIR" ]; then
+            LOG_COUNT=$(find "$LOG_DIR" -type f | wc -l)
+      
+            echo "Número de logs na pasta: $LOG_COUNT"
+      
+            if [ $LOG_COUNT -gt $LOG_LIMIT ]; then
+              FILES_TO_DELETE=$(find "$LOG_DIR" -type f -print0 | xargs -0 ls -t | tail -n +$(($LOG_LIMIT + 1)))
+      
+              for FILE in $FILES_TO_DELETE; do
+                echo "Deleting log file $FILE due to log limit"
+                rm "$FILE"
+              done
+            else
+              echo "Número de logs está dentro do limite."
+            fi
+          else
+            echo "Pasta $LOG_DIR não encontrada."
+          fi
+
+      - name: Manage Cypress Screenshots (limit to 100)
+        if: failure()
+        run: |
+          SCREENSHOT_DIR="cypress/screenshots"
+          SCREENSHOT_LIMIT=100
+      
+          if [ -d "$SCREENSHOT_DIR" ]; then
+            SCREENSHOT_COUNT=$(find "$SCREENSHOT_DIR" -type f | wc -l)
+      
+            echo "Número de screenshots na pasta: $SCREENSHOT_COUNT"
+      
+            if [ $SCREENSHOT_COUNT -gt $SCREENSHOT_LIMIT ]; then
+              FILES_TO_DELETE=$(find "$SCREENSHOT_DIR" -type f -print0 | xargs -0 ls -t | tail -n +$(($SCREENSHOT_LIMIT + 1)))
+      
+              for FILE in $FILES_TO_DELETE; do
+                echo "Deleting screenshot $FILE due to screenshot limit"
+                rm "$FILE"
+              done
+            else
+              echo "Número de screenshots está dentro do limite."
+            fi
+          else
+            echo "Pasta $SCREENSHOT_DIR não encontrada."
+          fi
+
       - name: Manage Cypress Videos (limit to 100)
         if: failure()
         run: |
@@ -80,7 +129,7 @@ jobs:
               FILES_TO_DELETE=$(find "$VIDEO_DIR" -type f -print0 | xargs -0 ls -t | tail -n +$(($VIDEO_LIMIT + 1)))
       
               for FILE in $FILES_TO_DELETE; do
-                echo "Deleting file $FILE due to video limit"
+                echo "Deleting video $FILE due to video limit"
                 rm "$FILE"
               done
             else
@@ -89,4 +138,3 @@ jobs:
           else
             echo "Pasta $VIDEO_DIR não encontrada."
           fi
-      
