Relatorios (screenshots, videos, xml e html)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,26 +133,26 @@ jobs:
             echo "Pasta $VIDEO_DIR não encontrada."
           fi
 
-      - name: Generate Cypress Success Report
-        run: |
-          echo "Todos os testes Cypress passaram com sucesso em $(date)" > cypress-success-report.txt
-          echo "\nComando de Execução: npm run test\n" >> cypress-success-report.txt
-          echo "Detalhes da Execução:\n" >> cypress-success-report.txt
-          
-          if [ -f cypress-output.txt ]; then
-            cat cypress-output.txt >> cypress-success-report.txt
-          else
-            echo "Arquivo cypress-output.txt não encontrado." >> cypress-success-report.txt
-          fi
+# - name: Generate Cypress Success Report
+#   run: |
+#     echo "Todos os testes Cypress passaram com sucesso em $(date)" > cypress-success-report.txt
+#     echo "\nComando de Execução: npm run test\n" >> cypress-success-report.txt
+#     echo "Detalhes da Execução:\n" >> cypress-success-report.txt
+    
+#     if [ -f cypress-output.txt ]; then
+#       cat cypress-output.txt >> cypress-success-report.txt
+#     else
+#       echo "Arquivo cypress-output.txt não encontrado." >> cypress-success-report.txt
+#     fi
 
-          if [ -d "cypress/reports" ] && [ "$(ls -A cypress/reports)" ]; then
-            echo "\nRelatório de Testes Cypress:\n" >> cypress-success-report.txt
-            cat cypress/reports/*.json >> cypress-success-report.txt
-          else
-            echo "Nenhum relatório de teste Cypress foi encontrado" >> cypress-success-report.txt
+#     if [ -d "cypress/reports" ] && [ "$(ls -A cypress/reports)" ]; then
+#       echo "\nRelatório de Testes Cypress:\n" >> cypress-success-report.txt
+#       cat cypress/reports/*.json >> cypress-success-report.txt
+#     else
+#       echo "Nenhum relatório de teste Cypress foi encontrado" >> cypress-success-report.txt
 
-      - name: Upload Cypress Success Report
-        uses: actions/upload-artifact@v4.4.3
-        with:
-          name: cypress-success-report
-          path: cypress-success-report.txt
+# - name: Upload Cypress Success Report
+#   uses: actions/upload-artifact@v4.4.3
+#   with:
+#     name: cypress-success-report
+#     path: cypress-success-report.txt
