Relatorios (screenshots, videos, xml e html)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
       
       - uses: actions/upload-artifact@v4
         with:
-          name: cypress-screenshots
-          path: cypress/screenshots
+          name: cypress/reports
+          path: cypress/reports
           if-no-files-found: ignore 
           
       - uses: actions/upload-artifact@v4
